--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+SENTRY_LARAVEL_DSN=
+# Keep low initially in production (e.g. 0.1) and tune later.
+SENTRY_TRACES_SAMPLE_RATE=0
+# Optional but recommended in production:
+# SENTRY_ENVIRONMENT=production
+# SENTRY_RELEASE=keiba-app@2026.02.28
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
