保存時間を日本時間に変更

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=Asia/Tokyo
 # Production example (Laravel Cloud):
 # APP_URL=https://your-app.laravel.cloud
 
@@ -35,6 +36,7 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# DB_TIMEZONE=+09:00
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
