Discordでのログインまわりを修正

--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,4 @@ VITE_APP_NAME="${APP_NAME}"
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_REDIRECT_URI="${APP_URL}/login/discord/callback"
+DISCORD_OAUTH_PROMPT=consent
